// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scroller props defaultValue: 0 & 50 type: x & y 1`] = `
.c0 {
  position: relative;
  background: #fbfbfb;
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  height: 1em;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  height: 0.6666666666666667em;
  margin-bottom: 0.16666666666666669em;
  margin-top: 0.16666666666666669em;
}

.c1:hover {
  background-color: #7a7a7a;
}

<div
  className="c0"
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseOut={[Function]}
  onMouseUp={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "width": "25em",
    }
  }
>
  <div
    className="c1"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "left": "0em",
        "width": "7.5em",
      }
    }
  />
</div>
`;

exports[`Scroller props defaultValue: 0 & 50 type: x & y 2`] = `
.c0 {
  position: relative;
  background: #fbfbfb;
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  width: 1em;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.6666666666666667em;
  margin-left: 0.16666666666666669em;
  margin-right: 0.16666666666666669em;
}

.c1:hover {
  background-color: #7a7a7a;
}

<div
  className="c0"
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseOut={[Function]}
  onMouseUp={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "height": "25em",
    }
  }
>
  <div
    className="c1"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "height": "7.5em",
        "top": "0em",
      }
    }
  />
</div>
`;

exports[`Scroller props defaultValue: 0 & 50 type: x & y 3`] = `
.c0 {
  position: relative;
  background: #fbfbfb;
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  height: 1em;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  height: 0.6666666666666667em;
  margin-bottom: 0.16666666666666669em;
  margin-top: 0.16666666666666669em;
}

.c1:hover {
  background-color: #7a7a7a;
}

<div
  className="c0"
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseOut={[Function]}
  onMouseUp={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "width": "25em",
    }
  }
>
  <div
    className="c1"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "left": "1.25em",
        "width": "7.5em",
      }
    }
  />
</div>
`;

exports[`Scroller props defaultValue: 0 & 50 type: x & y 4`] = `
.c0 {
  position: relative;
  background: #fbfbfb;
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  width: 1em;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.6666666666666667em;
  margin-left: 0.16666666666666669em;
  margin-right: 0.16666666666666669em;
}

.c1:hover {
  background-color: #7a7a7a;
}

<div
  className="c0"
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseOut={[Function]}
  onMouseUp={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "height": "25em",
    }
  }
>
  <div
    className="c1"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "height": "7.5em",
        "top": "1.25em",
      }
    }
  />
</div>
`;

exports[`Scroller props value: 0 & 50 type: x & y 1`] = `
.c0 {
  position: relative;
  background: #fbfbfb;
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  height: 1em;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  height: 0.6666666666666667em;
  margin-bottom: 0.16666666666666669em;
  margin-top: 0.16666666666666669em;
}

.c1:hover {
  background-color: #7a7a7a;
}

<div
  className="c0"
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseOut={[Function]}
  onMouseUp={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "width": "25em",
    }
  }
>
  <div
    className="c1"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "left": "0em",
        "width": "7.5em",
      }
    }
  />
</div>
`;

exports[`Scroller props value: 0 & 50 type: x & y 2`] = `
.c0 {
  position: relative;
  background: #fbfbfb;
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  height: 1em;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  height: 0.6666666666666667em;
  margin-bottom: 0.16666666666666669em;
  margin-top: 0.16666666666666669em;
}

.c1:hover {
  background-color: #7a7a7a;
}

<div
  className="c0"
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseOut={[Function]}
  onMouseUp={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "width": "25em",
    }
  }
>
  <div
    className="c1"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "left": "0em",
        "width": "7.5em",
      }
    }
  />
</div>
`;

exports[`Scroller props value: 0 & 50 type: x & y 3`] = `
.c0 {
  position: relative;
  background: #fbfbfb;
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  width: 1em;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.6666666666666667em;
  margin-left: 0.16666666666666669em;
  margin-right: 0.16666666666666669em;
}

.c1:hover {
  background-color: #7a7a7a;
}

<div
  className="c0"
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseOut={[Function]}
  onMouseUp={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "height": "25em",
    }
  }
>
  <div
    className="c1"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "height": "7.5em",
        "top": "0em",
      }
    }
  />
</div>
`;

exports[`Scroller props value: 0 & 50 type: x & y 4`] = `
.c0 {
  position: relative;
  background: #fbfbfb;
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  height: 1em;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  height: 0.6666666666666667em;
  margin-bottom: 0.16666666666666669em;
  margin-top: 0.16666666666666669em;
}

.c1:hover {
  background-color: #7a7a7a;
}

<div
  className="c0"
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseOut={[Function]}
  onMouseUp={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "width": "25em",
    }
  }
>
  <div
    className="c1"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "left": "1.25em",
        "width": "7.5em",
      }
    }
  />
</div>
`;

exports[`Scroller props value: 0 & 50 type: x & y 5`] = `
.c0 {
  position: relative;
  background: #fbfbfb;
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  width: 1em;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.6666666666666667em;
  margin-left: 0.16666666666666669em;
  margin-right: 0.16666666666666669em;
}

.c1:hover {
  background-color: #7a7a7a;
}

<div
  className="c0"
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseOut={[Function]}
  onMouseUp={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "height": "25em",
    }
  }
>
  <div
    className="c1"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "height": "7.5em",
        "top": "1.25em",
      }
    }
  />
</div>
`;

exports[`Scroller props: type is error 1`] = `""`;
